[ja1616][jg1216] Fixed overflowing stars problem on level selection page.

--- a/backend_js/public/shared/level_selection.css
+++ b/backend_js/public/shared/level_selection.css
@@ -1,6 +1,6 @@
 #selectionDiv {
   display: inline-block;
-  width: 100%;
+  width: 180%;
   max-width: 500px;
 }
 
